# HardGFX_Black

./: .gitignore  .gitmodules  README.md
hardgfx-black/: fp-lib-table  hardgfx-black-cache.lib  hardgfx-black-rescue.lib  hardgfx-black.kicad_prl  hardgfx-black.kicad_pro  hardgfx-black.kicad_sch  hardgfx-black.sch  hardgfx-black_debugger.kicad_sch  hardgfx-black_debugger.sch  hardgfx-black_flash.kicad_sch  hardgfx-black_flash.sch  hardgfx-black_power.kicad_sch  hardgfx-black_power.sch  hardgfx-black_sdram.kicad_sch  hardgfx-black_sdram.sch  kicost_BOM.xlsx  sym-lib-table
hardware/hardgfx-black/: #auto_saved_files#  fp-lib-table  hardgfx-black.kicad_pcb  hardgfx-black.kicad_prl  hardgfx-black.kicad_pro  hardgfx-black.kicad_sch  hardgfx-black.kicad_sch-bak  hardgfx-black_debug.kicad_sch  hardgfx-black_flash.kicad_sch  (+6 more)
software/template-proyect/: CMakeLists.txt
software/template-proyect/HardGFX_black_BSP/Inc/: hardgfx_black_bsp_lcd.h  hardgfx_black_bsp_ts.h
software/template-proyect/HardGFX_black_BSP/Src/: hardgfx_black_bsp_lcd.c  hardgfx_black_bsp_ts.c
software/template-proyect/M4/App/Inc/: main.h
software/template-proyect/M7/App/Inc/: hardgfx_black_it.h
software/template-proyect/M7/App/Src/: hardgfx_black_it.c  main.c  syscalls.c
software/template-proyect/Modules/Inc/: ft5336.h  ft5336Reg.h  mt48lc4m32b2.h
software/template-proyect/Modules/Src/: mt48lc4m32b2.c
software/template-proyect/Peripheral/Inc/: hardgfx_black_conf.h  hardgfx_black_lcd.h
software/template-proyect/Peripheral/Src/: hardgfx_black_bus.c  hardgfx_black_lcd.c  hardgfx_black_sdram.c
(+55 files in other folders)
