cmake_minimum_required(3.18)

project(HardGFX-Black)

# ========== CMake variables useful for auto-completion, code navigation and verbose compile output ==========
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_VERBOSE_MAKEFILE ON)
# ============================================================================================================

add_subdirectory(M4)
add_subdirectory(M7)
